name:                concurrency-primitive-benchmarks
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/concurrency-primitive-benchmarks#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10


executable benches
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , criterion
                     , stm
                     , async
                     , atomic-primops
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/concurrency-primitive-benchmarks
